packages/meta/src/test/__tests__/typer-tests/faultyDefFiles/syntax-errors/test1.type
typer test1 for language test1

istype { AA }

anytype {
    conformto BB;
}

AA { }
